--- a/display/css/main.css
+++ b/display/css/main.css
@@ -14,6 +14,7 @@
     margin-right: 10px;
     font-size: 12pt;
     width: 95%;
+    font-weight: 500;
 }
 
 /*--------------------------------------------------------------Code*/
@@ -99,5 +100,11 @@
 @media(min-width: 992px) {
     .display-lrg {
         display: text
+    }
+}
+
+@media (min-width: 992px) {
+    .hide-large {
+        display: none;
     }
 }
